@@ -24,18 +24,23 @@ import com.olivia.sdk.utils.$;
 import com.olivia.sdk.utils.BaseEntity;
 import com.olivia.sdk.utils.DynamicsPage;
 import com.olivia.sdk.utils.DynamicsPage.Header;
+import com.olivia.sdk.utils.FieldUtils;
 import com.olivia.sdk.utils.model.WeekInfo;
 import jakarta.annotation.Resource;
-
-import java.util.*;
-import java.util.concurrent.TimeUnit;
-import java.util.concurrent.atomic.AtomicLong;
-import java.util.stream.Collectors;
-
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.aop.framework.AopContext;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+
+import java.lang.reflect.Field;
+import java.math.BigDecimal;
+import java.util.*;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicLong;
+import java.util.concurrent.atomic.AtomicReference;
+import java.util.stream.Collectors;
+
+import static com.olivia.sdk.utils.FieldUtils.getField;
 
 /**
  * (ApsGoodsForecastMainMake)表服务实现类
@@ -151,11 +156,12 @@ public class ApsGoodsForecastMainMakeServiceImpl extends MPJBaseServiceImpl<ApsG
         saleDataList.stream().filter(t -> t.getSaleConfigCode().equals(code)).forEach(saleData -> {
           weekInfoListTmp.stream().collect(Collectors.groupingBy(t -> t.getCurrentDay().substring(5, 7) + "月" + t.getWeekNumber() + "周"))
               .forEach((mw, weekInfoListTmpTmp) -> {
-                AtomicLong sum = new AtomicLong(0);
+                AtomicReference<BigDecimal> sum = new AtomicReference<>(new BigDecimal(0L));
                 weekInfoListTmpTmp.forEach(d -> {
-                  Long value = (Long) ReflectUtil.getFieldValue(saleData, "dayNum" + d.getCurrentDate().getDayOfYear());
+                  Field field = getField(saleData, "dayNum" + d.getCurrentDate().getDayOfYear());
+                  BigDecimal value = (BigDecimal) FieldUtils.getFieldValue(saleData, field);
                   if (Objects.nonNull(value)) {
-                    sum.addAndGet(value);
+                    sum.set(value.add(sum.get()));
                   }
                 });
                 data.put(mw, sum.get());
@@ -169,11 +175,11 @@ public class ApsGoodsForecastMainMakeServiceImpl extends MPJBaseServiceImpl<ApsG
     weekInfoList.stream().collect(Collectors.groupingBy(t -> t.getCurrentDate().getYear())).forEach((y, weekInfoListTmp) -> {
       weekInfoListTmp.stream().collect(Collectors.groupingBy(t -> t.getCurrentDay().substring(5, 7) + "月" + t.getWeekNumber() + "周"))
           .forEach((mw, weekInfoListTmpTmp) -> {
-            headerList.add(new Header().setWidth(80).setFieldName(mw).setShowName(mw).setSortValue(weekInfoListTmpTmp.get(0).getCurrentDay()));
+            headerList.add(new Header().setWidth(80).setFieldName(mw).setShowName(mw).setSortValue(weekInfoListTmpTmp.getFirst().getCurrentDay()));
           });
     });
     headerList.sort(Comparator.comparing(Header::getSortValue));
-    headerList.add(0, new Header().setWidth(80).setFieldName("saleConfigCode").setShowName("销售配置编码"));
+    headerList.addFirst(new Header().setWidth(80).setFieldName("saleConfigCode").setShowName("销售配置编码"));
     resArrayList.sort(Comparator.comparing(ApsGoodsForecastMainMakeQueryDataByIdRes::getSaleConfigCode));
     return new DynamicsPage<ApsGoodsForecastMainMakeQueryDataByIdRes>().setHeaderList(headerList).setDataList(resArrayList);
   }
