@@ -1,8 +1,5 @@
 package com.olivia.peanut.portal.api.impl;
 
-import static java.lang.Boolean.FALSE;
-import static java.lang.Boolean.TRUE;
-
 import cn.hutool.core.collection.CollUtil;
 import cn.hutool.core.date.DateUtil;
 import cn.hutool.core.util.ReflectUtil;
@@ -20,18 +17,20 @@ import com.olivia.sdk.utils.$;
 import com.olivia.sdk.utils.DynamicsPage;
 import com.olivia.sdk.utils.PoiExcelUtil;
 import jakarta.annotation.Resource;
-
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Objects;
-import java.util.stream.IntStream;
-
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.multipart.MultipartFile;
+
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Objects;
+import java.util.stream.IntStream;
+
+import static java.lang.Boolean.FALSE;
+import static java.lang.Boolean.TRUE;
 
 /**
  * 工作日历(Calendar)表服务实现类
@@ -153,7 +152,7 @@ public class CalendarApiImpl implements CalendarApi {
   private Boolean isInSide(List<List<String>> dayList, String day) {
     if (CollUtil.isNotEmpty(dayList)) {
       for (List<String> days : dayList) {
-        if (Objects.nonNull(days) && days.size() == 2 && day.compareTo(days.get(0)) >= 0 && day.compareTo(days.get(1)) <= 0) {
+        if (Objects.nonNull(days) && days.size() == 2 && day.compareTo(days.getFirst()) >= 0 && day.compareTo(days.get(1)) <= 0) {
           return true;
         }
       }
